[package]
name = "sanctum-macros"
description = "Sanctum Solana Macros"
version = "1.3.0"
edition = "2021"
authors = ["sanctum"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/sanctum-macros.git"
readme = "README.md"
keywords = ["sanctum", "solana", "proc-macro", "codegen", "PDA"]
categories = ["rust-patterns"]

include = ["/src", "/README.md"]

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
solana-program = { workspace = true }
syn = { workspace = true }
